--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Yeoman generator for a full Flux, React and Router boilerplate.",
   "license": "MIT",
-  "main": "generators/app/index.js",
+  "main": "app/index.js",
   "repository": "apzentral/generator-react-flux-router-boilerplate",
   "author": {
     "name": "Prut Udomwattawee",
